// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateFormat component DateFormat renders exact with date integer 1`] = `
<div>
  01 Jan 1970 00:00 UTC
</div>
`;

exports[`DateFormat component DateFormat renders onlyDate with date integer 1`] = `
<div>
  01 Jan 1970
</div>
`;

exports[`DateFormat component DateFormat renders with date integer 1`] = `
<div>
  <span>
    Just now
  </span>
</div>
`;

exports[`DateFormat component DateFormat renders with date object 1`] = `
<div>
  <span>
    Just now
  </span>
</div>
`;

exports[`DateFormat component DateFormat renders with date string 1`] = `
<div>
  <span>
    Just now
  </span>
</div>
`;

exports[`DateFormat component DateFormat treats date bogus string as invalid 1`] = `
<div>
  Invalid date
</div>
`;

exports[`DateFormat component DateFormat treats date null as invalid 1`] = `
<div>
  Invalid date
</div>
`;

exports[`DateFormat component DateFormat treats date undefined as invalid 1`] = `
<div>
  Invalid date
</div>
`;
